projet_gl/src/test/deca/syntax/invalid/print/incorrectPrintlnx.deca
// Description:
//    invalid test parser for printlnx.
//
// Resultats:
//    ligne 12 : mismatched input ',' expecting {'true', 'new', 'null', 'readInt', 'false', 'readFloat', 'this', IDENT, '-', '(', ')', '!', INT, FLOAT, STRING}
//
// Historique:
//    cree le 12/01/2024

{
    int x, y;
    printlnx(, y);
}